--- a/assets/css/scss/_survey.scss
+++ b/assets/css/scss/_survey.scss
@@ -120,7 +120,7 @@ form#question-survey .survey_question {
   clear: both;
 }
 
-/* Question label / contenu (texte de la question) */
+/* Question label / question text */
 form#question-survey .survey_question .question-text,
 form#question-survey .survey_question > label,
 form#question-survey .survey_question .control-label {
@@ -130,7 +130,7 @@ form#question-survey .survey_question .control-label {
   color: #111827;
 }
 
-/* Conteneur d'options : alignement horizontal mais passe à la ligne si nécessaire */
+/* Options container: horizontal alignment + enf of line if necessary */
 form#question-survey .survey_question .options {
   display: flex !important;
   flex-wrap: wrap;
